--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a command-line application that takes in information about employees on a software engineering team, then generates a HTML webpage that displays summaries for each person.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/madeleinesc/team-profile-generator/issues"
   },
-  "homepage": "https://github.com/madeleinesc/team-profile-generator#readme"
+  "homepage": "https://github.com/madeleinesc/team-profile-generator#readme",
+  "devDependencies": {
+    "jest": "^27.3.1"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.0"
+  }
 }
